--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
+
 # Ignore Gradle project-specific cache directory
 .gradle
 
 # Ignore Gradle build output directory
 build
+
+# Ignore Bin directory
+app/bin
+
+# Ignore Mac DS_Store files
+**/.DS_Store
+
+# Ignore JAVADOC
+app/doc
+
+#Ignore settings
+app/.settings
