Removed redundant caching, getting artifact of buildfolder

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,8 +28,12 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
-        cache: gradle
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: build
+    - name: Archive test report
+      uses: actions/upload-artifact@v3
+      with:
+        name: Getting Build
+        path: build
