Testing out artifact retrival number two

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,5 +35,5 @@ jobs:
     - name: Archive test report
       uses: actions/upload-artifact@v3
       with:
-        name: Getting Build
-        path: ./build
+        name: Getting Tests
+        path: ./build/reports/tests/test
