--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,11 +29,9 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        arguments: build
+      uses: ./gradlew build
     - name: Archive test report
       uses: actions/upload-artifact@v3
       with:
         name: Getting Tests
-        path: build/tmp/gs-gradle-0.1.0.jar
+        path: build/*
