--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,4 +34,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: Getting Tests
-        path: build/*
+        path: build/reports/tests/test
