--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,6 +32,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: Package
-        path: ./
-    - name: Finding files
-      run: ls ./
+        path: ./app/build/libs/
